<resources>
    <string name="app_name">WalkingGroup</string>

    <!--Hardcode your API key like this. Don't use this test one!-->
    <string name="apikey">3A8E4897-E11F-46F8-A444-E7A97A5FB3D26</string>
    <string name="google_maps_apikey">AIzaSyBSqncGPQQx71qyCDOJuHxk7H_1Cvkuivw</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_create_group">Create a new group</string>

    <!-- Join Group activity -->
    <string name="join_group_grp_id">Group ID:</string>
    <string name="join_group_grp_desc">Group description:</string>
    <string name="join_group_grp_leader">Group leader:</string>
    <string name="join_group_members">Group members:</string>
    <string name="menu_join_group">Join this group</string>
    <string name="menu_add_user">Add someone to this group</string>
    <string name="menu_remove_user">Remove someone from this group</string>
    <string name="menu_leave_group">Leave this group</string>
    <string name="menu_go_back">Go back</string>
    <string name="MonitorListBtn">WHO I MONITOR</string>
    <string name="AddUserBtnText">Add Monitors</string>
    <string name="AllUserBtnText">All USERS</string>
    <string name="MonitorByBtnList">Who Monitor Me</string>
    <string name="responseAddMonitortext">people you are monitoring :</string>
    <string name="responseAddMonitorByText">people monitoring you :</string>
    <string name="loginuserText">user %1$s has already logged In</string>>
    <string name="title_activity_create_group_map">Map</string>

    <!-- Create Group activity -->
    <string name="textview_group_name">Group Description:</string>
    <string name="btn_set_meeting">Set Meeting Place</string>
    <string name="btn_set_destination">Set Destination</string>
    <string name="btn_create_new_group">Create Group</string>
    <string name="btn_cancel_create_group">Cancel</string>
    <string name="btn_view_groups">View Groups</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="emailAddress">Email address</string>
    <string name="email_address">Email address</string>
    <string name="sign_up">Sign Up</string>
    <string name="errorOfLogin">Can\'t log in, please check email address and password.</string>
    <string name="registerSucceed">Register succeed!</string>
    <string name="welcome">welcome,</string>
    <string name="invalidEmail">Not a valid email address!</string>
    <string name="invalidPassword">Password can\'t empty!</string>
    <string name="invalidName">Invalid name!</string>
    <string name="remove_dialogue_text">Select group members to remove:</string>
    <string name="dialogue_OK">OK</string>
    <string name="dialogue_cancel">Cancel</string>
    <string name="alert_add_members">Select group members to add:</string>
    <string name="Toast_user_added">Request to add user to group created</string>
    <string name="Toast_user_removed">User(s) successfully removed!</string>
    <string name="Toast_left_group">You have left this group</string>
    <string name="getDeviceLocation_exception">getDeviceLocation: SecurityException:</string>
    <string name="tag_on_info_window">Group -</string>
    <string name="group_info_window_snippet">Click here to manage group</string>
    <string name="group_size_zero">Groups size is 0</string>
    <string name="group_list_null">Groups list is null!</string>
    <string name="remove_leader_error_toast">You\'re the leader of this group; can\'t leave this group</string>
    <string name="returned">Success returned:</string>
    <string name="haveReg">Can\'t register, the email address have been used in register.</string>
    <string name="NotEmail">Doesn\'t exist this Email!</string>
    <string name="AlreadyMon">Can\'t add, this user is already monitoring to you or monitored by you!</string>
    <string name="log_out_btn_txt">Log Out</string>
    <string name="add_screen_txt">Add Who you want to monitor/monitor by</string>
    <string name="monitor_this_user_btn_txt">Monitor This User</string>
    <string name="add_monitor_by_this_user_btn_txt">Monitor By this user</string>
    <string name="empt_group_name_toast_msg">Group name can not be empty</string>
    <string name="create_group_success_toast_msg">Create group successfully ,Server replied with group ID:</string>
    <string name="title_activity_parents_dashboard">Map</string>
    <string name="edit_user">EDIT USER</string>
    <string name="users_you_are_monitoring_long_click_to_delete_single_click_to_edit">Users you are monitoring \nlong click to delete \nsingle click to edit</string>
    <string name="edit_this_user_info">Edit this user info</string>
    <string name="edit_user_detail">Edit User Detail</string>
    <string name="menu_start_uploading">Start uploading</string>
    <string name="menu_stop_uploading">Stop uploading</string>

    <!-- Contact Info -->
    <string name="new_name">New Name</string>
    <string name="your_name">your name</string>
    <string name="email">Email</string>
    <string name="new_email">new email</string>
    <string name="validate">VALIDATE</string>
    <string name="birth_year">BIRTH YEAR</string>
    <string name="birth_month">BIRTH MONTH</string>
    <string name="cellphone">CELLPHONE</string>
    <string name="home_phone">HOME PHONE</string>
    <string name="address">ADDRESS</string>
    <string name="grade">GRADE</string>
    <string name="teacher_name">TEACHER NAME</string>
    <string name="emergency_contact">EMERGENCY \n CONTACT</string>
    <string name="year_of_birth">year of birth</string>
    <string name="month_of_birth">month of birth</string>
    <string name="house_address">house address</string>
    <string name="contact_number">contact number</string>
    <string name="phone_number">phone number</string>
    <string name="your_grade">your grade</string>
    <string name="emergency_contact_person">emergency contact person</string>
    <string name="edit_info">EDIT INFO</string>
    <string name="name_of_teacher">name of teacher</string>
    <string name="click_to_check_parent_s_infomation">Click to check parent\'s infomation</string>
    <string name="nameToShow">Name</string>
    <string name="birthday">BirthDay</string>
    <string name="cell_phone">CELL PHONE</string>
    <string name="cantAccess">Sorry, you can not access the parents\' information of this group.</string>
    <string name="send_message">Send Message</string>
    <string name="unreadCount"> \n You have %d unread messages</string>
    <string name="unreadCountForParent"> %d unread messages</string>
    <string name="empty_msg_error_text">Message can not be empty</string>
    <string name="defalut_emergency_msg_">emergency msg!!!</string>
    <string name="checkbox_text">Is this emergency?</string>
    <string name="fail_to_send_msg_text">Fail to send message. you must have at least one parent or group leader</string>
    <string name="msg_sent_successful_text">message sent successfully, msg ID: %1$d</string>
    <string name="msg_content_dialog_title">message content</string>
    <string name="from_whom_display">From: %1$s</string>
    <string name="leader_btn_text">Send Message To Group Members   and their parents</string>
    <string name="panic_btn_text">Panic</string>
    <string name="non_emergency_btn_text">Non Emergency msg   To Parent</string>

    <!-- MapsActivity -->
    <string name="btn_start_uploading"> Start uploading</string>
    <string name="btn_stop_uploading">Stop uploading</string>
    <string name="menu_start_walking">Start walking with this group</string>
    <string name="btn_open_dashboard">Open dashboard</string>
    <string name="btn_panic">PANIC</string>
    <string name="marker_last_updated">last updated: </string>
    <string name="marker_secs_ago"> secs ago</string>
    <string name="marker_mins_ago"> mins ago</string>
    <string name="marker_went_offline">went offline </string>
    <string name="marker_offline_more_than_1_hr">went offline >1 hour ago</string>
    <string name="dest_not_set_error">Please select a group to walk with first!</string>
    <string name="uploading_location">Uploading your location...</string>
    <string name="uploading_stops">Uploading location stops</string>
    <string name="starting_upload">Starting location upload...</string>
    <string name="emailAlreadyRegister">This email address is already registered!</string>
    <string name="optional_only_child_need">optional - only child need</string>
    <string name="refresh">REFRESH</string>
    <string name="panic_button">Panic Button</string>
    <string name="alert_dialog_frag">ALERT!!!</string>
    <string name="delete_user">Delete User</string>
    <string name="Not_Message">You don\'t have any message yet!</string>
    <string name="view_reward_points">View reward points</string>
    <string name="btn_open_leader_board">Open leader board</string>
    <string name="txt_top_100_users">Top 100 users:</string>
    <string name="toast_walk_completed">You have been rewarded 50 points for completing the walk!</string>
    <string name="toast_not_enough_points">you don\'t have enough points</string>
    <string name="text_already_purchased">Already purchased!</string>
    <string name="toast_purchase_successful">Purchased successfully!</string>
    <string name="permission">PERMISSION</string>
    <string name="pending">Pending</string>
    <string name="Approved">Approved</string>
    <string name="denied">Denied</string>
    <string name="theRequest">the request.</string>
    <string name="would_you_like_to_lead_the_group">Would you like to lead the group?</string>
    <string name="record">Record</string>
    <string name="noPermission">Yon don\'t have any permissions.</string>
    <string name="makeDecision">Make decision!</string>
    <string name="approveThisReq">\u0020approved this request.</string>
    <string name="denyThisREQ">\u0020deny this request.</string>
    <string name="click_permission_request_to_make_decision_or_see_the_decsion_from_other_users">Click permission request to make decision or see the decsion from other users.</string>
    <string name="btn_change_to_default">Change to default</string>
    <string name="toast_logo_changed">Logo changed!</string>
    <string name="txt_buy_instructions">Click to buy or change logo</string>
    <string name="Earth">Earth</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="neptune">Neptune</string>
    <string name="refreshed">Refreshed</string>


</resources>
