<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.cmpt276.walkinggroup.app.CreateGroup">

    <TextView
        android:id="@+id/txt_create_grp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="56dp"
        android:fontFamily="casual"
        android:text="@string/textview_group_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/groupNameEd"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txt_create_grp_name"
        android:layout_marginTop="93dp"
        android:text="" />

    <Button
        android:id="@+id/btn_set_meeting_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="173dp"
        android:background="@drawable/button_style"
        android:fontFamily="casual"
        android:text="@string/btn_set_meeting"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_set_destination"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btn_set_meeting_place"
        android:layout_marginTop="241dp"
        android:background="@drawable/button_style"
        android:fontFamily="casual"
        android:text="@string/btn_set_destination"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_create_new_group"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btn_set_meeting_place"
        android:layout_marginBottom="205dp"
        android:background="@drawable/button_style"
        android:fontFamily="casual"
        android:text="@string/btn_create_new_group"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_cancel_create_group"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btn_set_meeting_place"
        android:layout_marginBottom="137dp"
        android:background="@drawable/button_style"
        android:fontFamily="casual"
        android:text="@string/btn_cancel_create_group"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</RelativeLayout>
