<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.cmpt276.walkinggroup.app.MainActivity">

    <Button
        android:id="@+id/mapBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="111dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/button_style"
        android:text="@string/btn_view_groups"
        app:layout_constraintBottom_toBottomOf="@+id/getUsersBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addUsers" />

    <Button
        android:id="@+id/getUsersBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_style"
        android:text="@string/MonitorListBtn"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/getMonitorByBtn"
        app:layout_constraintEnd_toEndOf="@+id/getMonitorByBtn"
        app:layout_constraintStart_toStartOf="@+id/getMonitorByBtn" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="234dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/button_style"
        android:text="Log_In"
        app:layout_constraintBottom_toTopOf="@+id/addUsers"
        app:layout_constraintEnd_toEndOf="@+id/addUsers"
        app:layout_constraintEnd_toStartOf="@+id/userName"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addUsers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="173dp"
        android:layout_marginTop="174dp"
        android:background="@drawable/button_style"
        android:text="@string/AddUserBtnText"
        app:layout_constraintBottom_toTopOf="@+id/getUsersBtn"
        app:layout_constraintEnd_toEndOf="@+id/mapBtn"
        app:layout_constraintStart_toStartOf="@+id/mapBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getMonitorByBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="97dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="17dp"
        android:background="@drawable/button_style"
        android:text="@string/MonitorByBtnList"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_create_group"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_create_group"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="26dp"
        android:background="@drawable/button_style"
        android:text="@string/btn_create_new_group"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/LogOutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="164dp"
        android:lineSpacingExtra="24sp"
        android:text="Log Out"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="62dp"
        android:layout_marginTop="33dp"
        android:lineSpacingExtra="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logInBtn"
        app:layout_constraintTop_toBottomOf="@+id/LogOutText" />


</android.support.constraint.ConstraintLayout>
